MZK 02.04.2018 20:46:14 -0700 - build 5181

1. Починил переполнение буфера в SearchString + рефакторинг.

drkns 02.04.2018 16:36:26 +0300 - build 5180

1. Уточнение 5175.

zg 02.04.2018 13:55:55 +0300 - build 5179

1. ctrlenter в "меню с результатами поиска всех вхождений" некорректно перерисовывал экран.

w17 02.04.2018 12:04:49 +0300 - build 5178

1. Extract alternate streams from .wim archives

drkns 31.03.2018 01:41:08 +0300 - build 5177

1. Используем std::any (если есть).

drkns 30.03.2018 11:35:45 +0300 - build 5176

1. Продолжение 5175.

drkns 29.03.2018 13:05:45 +0300 - build 5175

1. С форума: падение при File panel modes -> Ins Enter.

2. Некорректно работало удаление нескольких выделенных симлинков.

3. Рефакторинг.

drkns 23.03.2018 19:16:27 +0000 - build 5174

1. Продолжение 5173 - аналогичные изменения в прогрессе удаления.

drkns 23.03.2018 00:15:02 +0000 - build 5173

1. Немного переделан "диалог" сканирования папок:
   - теперь это всегда (F3 на папке, перед копированием, перед удалением) выглядит одинаково
   - выводится суммарный размер и количество элементов
   - F3 на нескольких папках больше не дёргается и не мерцает.

drkns 20.03.2018 21:35:50 +0000 - build 5172

1. Уточнение 5171.

drkns 19.03.2018 22:47:53 +0000 - build 5171

1. В меню выбора архивного плагина неадекватно работал выбор стандартной ассоциации.

2. Рефакторинг.

MZK 18.03.2018 21:30:11 -0700

1. Переписал страницу @PreserveStyle справки (английскую и русскую).

drkns 14.03.2018 22:33:55 +0000 - build 5170

1. Нефункциональная косметика:
   - virtual override -> override
   - (void) -> ()
   - // fallthrough -> [[fallthrough]];
   - --memcpy

drkns 14.03.2018 10:01:32 +0000 - build 5169

1. Пара уточнений 5168.

drkns 13.03.2018 22:40:25 +0000 - build 5168

1. Рефакторинг.

2. clang warnings.

3. Уточнение 5154.

yjh 11.03.2018 14:04:57 +0300 - build 5167

1. Уточнения в поддержке старых версий системы с использованием DelayLoad

drkns 11.03.2018 09:47:19 +0000 - build 5166
