@@ -1724,9 +1724,41 @@ bool Edit::ProcessMouse(const MOUSE_EVENT_RECORD *MouseEvent)
    Немного изменён алгоритм из-за необходимости
    добавления поиска целых слов.
 */
-int Edit::Search(const string& Str, const string& UpperStr, const string& LowerStr, RegExp& re, RegExpMatch* pm, MatchHash* hm, string& ReplaceStr, int& Position, int Case, int WholeWords, int Reverse, int Regexp, int PreserveStyle, int *SearchLength) const
+int Edit::Search(
+	string_view const Str,
+	string_view const UpperStr,
+	string_view const LowerStr,
+	const RegExp& re,
+	RegExpMatch* const pm,
+	MatchHash* const hm,
+	string& ReplaceStr,
+	int& Position,
+	bool const Case,
+	bool const WholeWords,
+	bool const Reverse,
+	bool const Regexp,
+	bool const PreserveStyle,
+	int* const SearchLength
+) const
 {
-	return SearchString(m_Str, Str, UpperStr, LowerStr, re, pm, hm, ReplaceStr, Position, Case, WholeWords, Reverse, Regexp, PreserveStyle, SearchLength, WordDiv().data());
+	return SearchString(
+		m_Str,
+		Str,
+		UpperStr,
+		LowerStr,
+		re,
+		pm,
+		hm,
+		ReplaceStr,
+		Position,
+		Case,
+		WholeWords,
+		Reverse,
+		Regexp,
+		PreserveStyle,
+		SearchLength,
+		WordDiv()
+	);
 }
 
 void Edit::InsertTab()
