@@ -149,7 +149,23 @@ public:
 
 	void ClearString() { SetString({}); }
 
-	int Search(const string& Str, const string& UpperStr, const string& LowerStr, RegExp& re, RegExpMatch* pm, MatchHash* hm, string& ReplaceStr, int& Position, int Case, int WholeWords, int Reverse, int Regexp, int PreserveStyle, int *SearchLength) const;
+	int Search(
+		string_view Str,
+		string_view UpperStr,
+		string_view LowerStr,
+		const RegExp& re,
+		RegExpMatch* pm,
+		MatchHash* hm,
+		string& ReplaceStr,
+		int& Position,
+		bool Case,
+		bool WholeWords,
+		bool Reverse,
+		bool Regexp,
+		bool PreserveStyle,
+		int *SearchLength
+	) const;
+
 	void SetCurPos(int NewPos) {m_CurPos=NewPos; SetPrevCurPos(NewPos);}
 	void AdjustMarkBlock();
 	void AdjustPersistentMark();
