@@ -1,3 +1,7 @@
+drkns 04.04.2018 19:02:50 +0300 - build 5182
+
+1. Не работал повторный поиск окончания строки (последствия 5181). Попробуем исправить иначе.
+
 MZK 02.04.2018 20:46:14 -0700 - build 5181
 
 1. Починил переполнение буфера в SearchString + рефакторинг.
